objects/HealthCloudGA__HousingAssessment__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Housing Assessments</relationshipLabel>
        <relationshipName>HousingAssessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AssessmentDate__c</fullName>
        <description>Date of the housing assessment.</description>
        <label>Assessment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CanPrepareFoodSafely__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a person can prepare food.</description>
        <label>Can prepare food safely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CanQuarantine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a person can quarantine effectively.</description>
        <label>Can quarantine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Dwelling__c</fullName>
        <description>Type of residence for the person.</description>
        <label>Dwelling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Recreational Vehicle or Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Long-Term Care Facility</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing Facility</fullName>
                </value>
                <value>
                    <fullName>Board and Care or Assisted Living Facility</fullName>
                </value>
                <value>
                    <fullName>Multi-Family Dwelling</fullName>
                </value>
                <value>
                    <fullName>Hotel or Motel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HasPrivateBathroom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a person has access to a private bathroom.</description>
        <label>Has private bathroom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsHomeless__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether are person has a place to live.</description>
        <label>Is homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__QuarantineEndDate__c</fullName>
        <description>End date of the quarantine period.</description>
        <label>Quarantine End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__QuarantineLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the location where the person is to quarantine.</description>
        <label>Quarantine Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Housing Assessments</relationshipLabel>
        <relationshipName>HousingAssessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__QuarantineStartDate__c</fullName>
        <description>Start date of the quarantine period.</description>
        <label>Quarantine Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Housing Assessment</label>
    <nameField>
        <label>Housing Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>